--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rneui/themed": "0.0.0-edge.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-linking": "^3.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,16 +25,17 @@
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-element-dropdown": "^1.8.11",
     "react-native-form-validator": "^0.5.1",
-    "react-native-gesture-handler": "^2.4.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-reanimated": "^2.8.0",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-razorpay": "^2.2.9"
   },
-  "private": true,
-  "proxy": "http://t1.example.com:8000/"
+  "private": true
 }
